--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
   <title>Alessandro Berno Condori</title>
   <link rel="stylesheet" href="style.css">
+  <meta name="keywords" content ="Alessandro,del,Piero,Jhon,Berno,Condori"
 </head>
 <body>
   <section class="box">
